--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@heroicons/react": "^2.2.0",
     "@tailwindcss/vite": "^4.1.14",
+    "axios": "^1.12.2",
     "chart.js": "^4.5.0",
     "formik": "^2.4.6",
     "lucide": "^0.545.0",
