--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,11 +15,13 @@
     "axios": "^1.12.2",
     "chart.js": "^4.5.0",
     "formik": "^2.4.6",
+    "framer-motion": "^12.23.24",
     "lucide": "^0.545.0",
     "lucide-react": "^0.545.0",
     "react": "^19.2.0",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.2.0",
+    "react-feather": "^2.0.10",
     "react-router-dom": "^7.9.4",
     "tailwindcss": "^4.1.14",
     "yup": "^1.7.1"
